--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,11 +2,11 @@
 main:
   - title: "내역보기"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+   - title: "About"
+     url: https://mmistakes.github.io/minimal-mistakes/about/
+   - title: "Sample Posts"
+     url: /year-archive/
+   - title: "Sample Collections"
+     url: /collection-archive/
+   - title: "Sitemap"
+     url: /sitemap/
